<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
    <name>depth_processing</name>
    <version>0.0.0</version>
    <description>The depth_processing package</description>

    <maintainer email="rohanblueboybaijal@todo.todo">rohanblueboybaijal</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

</package>
    